# ask-openapi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
src/: chat.py  openapi_helpers.py  settings.py  sync.py  ui.py
